# tessellation

./: .ackrc  .editorconfig  .gitignore  Makefile  NOTICE  Pipfile  README.md  manage.py  pyproject.toml  setup.cfg  setup.py  tox.ini
accounts/: serializers.py  urls.py  views.py
accounts/templates/: login.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html
accounts/tests/: test_api.py
conf/: asgi.py  settings.py  settings_base.py  settings_dev.py  settings_prod.py  settings_prod_ssl.py  settings_test.py  urls.py  wsgi.py
frontend/: .eslintrc.yml  .gitignore  package.json  vue.config.js
frontend/src/: App.vue
frontend/src/css/: _mixins.scss  _variables.scss  box.scss  button.scss  layout.scss  main.scss  text.scss
frontend/src/js/: App.vue  api.js  app.js  composition.js  html.js  http.js  log.js  main.js  state.js  storage.js  store.js
frontend/src/js/components/: Composition.vue  CompositionCanvas.vue  CompositionControls.vue  CompositionTile.vue  CompositionTileEdge.vue  Detail.vue  Download.vue  Edge.vue  Featured.vue  Header.vue  InputControls.vue  InputImage.vue  InputImages.vue  Intro.vue  PageHeader.vue  PageIntro.vue  Settings.vue  SettingsForm.vue  Storage.vue  StorageLocal.vue  StoragePublic.vue  StorageRemote.vue  StorageRemoteItem.vue  TessellationComposition.vue  TessellationCompositionControls.vue  TessellationStorage.vue  TessellationStorageLocal.vue  TessellationStorageRemote.vue  TessellationStorageRemoteItem.vue  Tile.vue
frontend/src/js/pages/: Detail.vue  DetailPage.vue  EditPage.vue  Index.vue  IndexPage.vue  Intro.vue  ListPage.vue  NotFound.vue  NotFoundPage.vue  detail.js  edit.js  index.js  list.js
frontend/src/js/utils/: html.js  http.js
frontend/tests/unit/: composition.spec.js
tessellation/: __init__.py  admin.py  apps.py  composition.py  conftest.py  feeds.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
tessellation/fixtures/composition-01/: data.json
tessellation/management/commands/: populate_db.py
tessellation/migrations/: 0001_initial.py  0002_composition_public.py  0003_composition_name.py  0004_composition_public_requested_at.py  0005_composition_featured.py  0006_image_self_connect.py  0007_remove_image_self_connect.py  0008_composition_image.py  0009_composition_render_image.py  0010_composition_created_at_auto_now_add.py  0011_composition_image_unique.py
tessellation/static/css/: main.scss
tessellation/static/js/: composition.js  html.js  log.js  state.js  storage.js
tessellation/static/js/components/: composition.js  images.js  intro.js  settings.js  storage.js  tile.js
tessellation/static/js/utils/: array.js  func.js
tessellation/templates/: 404.html  app.html  base.html  create.html  detail.html  edit.html  index.html  list.html  page.html
tessellation/templates/feeds/: compositions.html
tessellation/templates/partials/: footer.html  header.html  header_user.html
tessellation/templatetags/: email_extras.py
tessellation/tests/: test_api.py  test_composition.py  test_models.py  test_populate_db.py  test_views.py
tiles/: __init__.py  admin.py  managers.py  models.py  permissions.py  serializers.py  settings.py  tests.py  urls.py  views.py  wsgi.py
tiles/fixtures/: composition-01.json
tiles/fixtures/composition-01/: data.json
tiles/management/commands/: populate_db.py
tiles/migrations/: 0001_initial.py  0002_composition_public.py  0003_composition_name.py
tiles/static/: package-lock.json
tiles/static/css/: main.css  main.scss
tiles/static/js/: canvas.js  composition.js  html.js  http.js  main.js  state.js  storage.js
tiles/static/js/components/: composition.js  images.js  intro.js  settings.js  storage.js  tile.js
tiles/static/js/pages/: create.js  detail.js
tiles/static/js/utils/: date.js
tiles/templates/: base.html  create.html  detail.html  index.html  new.html
tiles/templates/registration/: login.html
